RESOLVED FIXED318159
[GFC] fit-content grid items should contribute min-content instead of used minimum size when sizing tracks
https://bugs.webkit.org/show_bug.cgi?id=318159
Summary [GFC] fit-content grid items should contribute min-content instead of used mi...
Yulun Wu
Reported 2026-06-29 15:49:37 PDT
Attachments
Yulun Wu
Comment 1 2026-06-29 15:58:45 PDT
EWS
Comment 2 2026-06-30 14:49:37 PDT
Committed 316202@main (6db96cd11f96): <https://commits.webkit.org/316202@main> Reviewed commits have been landed. Closing PR #68133 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.