[GFC] fit-content grid items should contribute min-content instead of used minimum size when sizing tracks. https://bugs.webkit.org/show_bug.cgi?id=318159 <rdar://180968579>

Reviewed by Sammy Gill.

315911@main incorrectly included preferredSize.isFitContent() in
GridLayoutUtils::preferredSizeDependsOnContainingBlockSize(), causing
grid items with fit-content to incorrectly contribute used minimum size
instead of min-content size when sizing tracks.

Note that our avoidance reasons are only allowing grids with auto and
fixed grid item widths to run through GFC.

https://searchfox.org/wubkat/source/Source/WebCore/layout/integration/grid/LayoutIntegrationGridCoverage.cpp#226

* Source/WebCore/layout/formattingContexts/grid/GridLayoutUtils.cpp:
(WebCore::Layout::GridLayoutUtils::preferredSizeDependsOnContainingBlockSize):

Canonical link: https://commits.webkit.org/316202@main